--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
     <blockquote>
-    <p>gggggggggggggggggggggvvv</p>
+    <p>gggggggggvvv</p>
 </blockquote>
     <ul>
         <li></li>
