--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
+    <img src="./img/catedral-de-morelia.jpg" />
     <blockquote>
     <p>gggggggggvvv</p>
 </blockquote>
