--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
-    <img src="./img/catedral-de-morelia.jpg" />
+    <img src="/Users/irisrubio/Desktop/astridorozco.github.io/img/catedral-de-morelia.jpg" />
     <blockquote>
     <p>gggggggggvvv</p>
 </blockquote>
