--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <p>gggggggggvvv</p>
 </blockquote>
     <ul>
-        <li></li>
-        <li></li>
+        <li></li><p>Camelias</p><img src="img/camelia-01-620x319.webp"/>
+        <li></li><p>jacarandas</p><img src=""/>
     </ul>
    <a href="https://www.picturethisai.com/es/region/Mexico-Michoacan-de-Ocampo-Morelia.html">Enlace a Google</a></li>
 </body>
