--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </blockquote>
     <ul>
         <li></li><p>Camelias</p><img src="img/camelia-01-620x319.webp"/>
-        <li></li><p>jacarandas</p><img src=""/>
+        <li></li><p>jacarandas</p><img src="img/jacarandas.jpg"/>
     </ul>
    <a href="https://www.picturethisai.com/es/region/Mexico-Michoacan-de-Ocampo-Morelia.html">Enlace a Google</a></li>
 </body>
