div {margin: 50px;}

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>plantas HTML</title>
 </head>
-<body>
+<body> 
+    <div>{margin: 50px;}</div>
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
     <img src="img/catedral-de-morelia.jpg" />
