--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>plantas HTML</title>
 </head>
-<body> 
-    <div>{margin: 50px;}</div>
+<body> margin: 50px;
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
     <img src="img/catedral-de-morelia.jpg" />
