--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>plantas HTML</title>
 </head>
-<body> margin: 100px;
+<body>margin: 50
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
     <img src="img/catedral-de-morelia.jpg" />
