margen y tamaño de imagenes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>plantas HTML</title>
+    <style> img {
+        width: 200px; /* Establece el ancho de todas las imágenes en 200 píxeles */
+        height: 150px; /* Establece el alto de todas las imágenes en 150 píxeles */
+      }</style>
 </head>
-<body>margin: 50
+<body> 
+    <img  {
+    width: 200px; /* Establece el ancho de todas las imágenes en 200 píxeles */
+    height: 150px; /* Establece el alto de todas las imágenes en 150 píxeles */
+  }
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
     <img src="img/catedral-de-morelia.jpg" />
