--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>plantas HTML</title>
-    <style> img {
-        width: 200px; /* Establece el ancho de todas las imágenes en 200 píxeles */
-        height: 150px; /* Establece el alto de todas las imágenes en 150 píxeles */
-      }</style>
+    <style>
+        img {
+            width: 200px;
+            height: 150px;
+            margin: 10px; /* Añade un margen de 10px alrededor de cada imagen */
+        }
+        .imagen-grande {
+            width: 500px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body> 
-    <img  {
-    width: 500px; /* Establece el ancho de todas las imágenes en 500 píxeles */
-    height: 400px; /* Establece el alto de todas las imágenes en 400 píxeles */
-  }
+
     <h1>Plantas</h1>
     <p><em>Plantas de Morelia</em></p>
     <img src="img/catedral-de-morelia.jpg" />
