--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>plantas HTML</title>
     <style>
+        body {
+            margin: 40px; /* Ajusta el valor del margen según tus preferencias */
+            font-family: Arial, sans-serif; /* Puedes cambiar la fuente si lo deseas */
+        }
         img {
             width: 400px;
-            height: 350px;
-            margin: 20px; /* Añade un margen de 10px alrededor de cada imagen */
+            height: 300px;
+            margin-bottom: 20px; /* Margen inferior para separar las imágenes */
         }
         .imagen-grande {
             width: 500px;
