--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>plantas HTML</title>
+    <title>plantas </title>
+    <body style="background-color: aquamarine;"/>
     <style>
+
         body {
             margin: 80px; /* Ajusta el valor del margen según tus preferencias */
             font-family: Arial, sans-serif; /* Puedes cambiar la fuente si lo deseas */
@@ -25,7 +27,8 @@
     <p><em>Plantas de Morelia</em></p>
     <img src="img/catedral-de-morelia.jpg" />
     <blockquote>
-    <p>gggggggggvvv</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam animi temporibus dicta beatae perferendis cupiditate labore quis quo, suscipit pariatur ex itaque, voluptate qui consequatur. Natus magni sint corporis aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo aperiam voluptatibus impedit libero dicta! Perspiciatis, neque! Quae necessitatibus ad doloribus consectetur atque? Quia pariatur temporibus obcaecati provident accusamus veritatis sed.</p>
 </blockquote>
     <ul>
         <li></li><p>Camelias</p><img src="img/camelia-01-620x319.webp"/>
